# Bookstore-2025-JZK

./: .gitignore  CMakeLists.txt  SRS.md  ans.out  code  database.cpp  run_tests  总体设计文档.md
MemoryRiver-Easy/: MemoryRiver-Easy.hpp
include/: BlockStorage.hpp  Book.hpp  Error.hpp  Log.hpp  User.hpp  user.hpp
key-value database/: a_new_version.cpp  key-value-database.cpp
src/: Book.cpp  Error.cpp  Log.cpp  User.cpp  main.cpp
test_output/: 110.out  163.out  2.out
testpoints/: 110_test.in
